1. update learn.ipynb 2. add Exercise: Health Statistics 3. add Exercise: Protobuf Parsing

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -2029,6 +2029,433 @@
     "println!(\"a strong: {}\", Rc::strong_count(&a));\n",
     "println!(\"b strong: {}\", Rc::strong_count(&b));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Borrowing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Borrow a Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&p.0: 0x7ffd86c5dea0\n",
+      "&p3.0: 0x7ffd86c5dea0\n",
+      "Point(3, 4) + Point(10, 20) = Point(13, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Point(i32, i32);\n",
+    "\n",
+    "fn add(p1: &Point, p2: &Point) -> Point {\n",
+    "    let p = Point(p1.0 + p2.0, p1.1 + p2.1);\n",
+    "    println!(\"&p.0: {:p}\", &p.0);\n",
+    "    p\n",
+    "}\n",
+    "\n",
+    "let p1 = Point(3, 4);\n",
+    "let p2 = Point(10, 20);\n",
+    "let p3 = add(&p1, &p2);\n",
+    "println!(\"&p3.0: {:p}\", &p3.0);\n",
+    "println!(\"{p1:?} + {p2:?} = {p3:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Borrow Checking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b: 10\n",
+      "c: 20\n",
+      "a: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "let _  = {\n",
+    "    let mut a: i32 = 10;\n",
+    "    let b: &i32 = &a;\n",
+    "\n",
+    "    println!(\"b: {b}\");\n",
+    "    {\n",
+    "        let c: &mut i32 = &mut a;\n",
+    "        *c = 20;\n",
+    "        // let c: &i32 = &a;\n",
+    "        println!(\"c: {c}\");\n",
+    "    }\n",
+    "\n",
+    "    println!(\"a: {a}\");\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interior Mutability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph: RefCell {\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    value: Node {\n",
+      "        value: 1,\n",
+      "        children: [\n",
+      "            RefCell {\n",
+      "                value: Node {\n",
+      "                    value: 5,\n",
+      "                    children: [],\n",
+      "                },\n",
+      "            },\n",
+      "            RefCell {\n",
+      "                value: Node {\n",
+      "                    value: 10,\n",
+      "                    children: [\n",
+      "                        RefCell {\n",
+      "                            value: Node {\n",
+      "                                value: 11,\n",
+      "                                children: [],\n",
+      "                            },\n",
+      "                        },\n",
+      "                        RefCell {\n",
+      "                            value: Node {\n",
+      "                                value: 12,\n",
+      "                                children: [],\n",
+      "                            },\n",
+      "                        },\n",
+      "                    ],\n",
+      "                },\n",
+      "            },\n",
+      "        ],\n",
+      "    },\n",
+      "}\n",
+      "graph sum: 39\n",
+      "graph sum: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::cell::RefCell;\n",
+    "use std::rc::Rc;\n",
+    "\n",
+    "#[derive(Debug, Default)]\n",
+    "struct Node {\n",
+    "    value: i64,\n",
+    "    children: Vec<Rc<RefCell<Node>>>,\n",
+    "}\n",
+    "\n",
+    "impl Node {\n",
+    "    fn new(value: i64) -> Rc<RefCell<Node>> {\n",
+    "        Rc::new(RefCell::new(Node { value, ..Node::default() }))\n",
+    "    }\n",
+    "\n",
+    "    fn sum(&self) -> i64 {\n",
+    "        self.value + self.children.iter().map(|c| c.borrow().sum()).sum::<i64>()\n",
+    "    }\n",
+    "\n",
+    "    fn inc(&mut self) {\n",
+    "        self.value += 1;\n",
+    "        for n in &self.children {\n",
+    "            n.borrow_mut().inc();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let root = Node::new(1);\n",
+    "root.borrow_mut().children.push(Node::new(5));\n",
+    "let subtree = Node::new(10);\n",
+    "subtree.borrow_mut().children.push(Node::new(11));\n",
+    "subtree.borrow_mut().children.push(Node::new(12));\n",
+    "root.borrow_mut().children.push(subtree);\n",
+    "\n",
+    "println!(\"graph: {root:#?}\");\n",
+    "println!(\"graph sum: {}\", root.borrow().sum());\n",
+    "\n",
+    "root.borrow_mut().inc();\n",
+    "println!(\"graph sum: {}\", root.borrow().sum());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slice and Lifetimes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: [10, 20, 30, 40, 50, 60]\n",
+      "s: [30, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "let _ = {\n",
+    "    let mut a: [i32; 6] = [10, 20, 30, 40, 50, 60];\n",
+    "    println!(\"a: {a:?}\");\n",
+    "\n",
+    "    let s: &[i32] = &a[2..4];\n",
+    "    println!(\"s: {s:?}\");\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1: World\n",
+      "s2: Hello \n",
+      "s2: Hello World\n",
+      "s3: World\n"
+     ]
+    }
+   ],
+   "source": [
+    "let _ = {\n",
+    "    let s1: &str = \"World\";\n",
+    "    println!(\"s1: {s1}\");\n",
+    "\n",
+    "    let mut s2: String = String::from(\"Hello \");\n",
+    "    println!(\"s2: {s2}\");\n",
+    "    s2.push_str(s1);\n",
+    "    println!(\"s2: {s2}\");\n",
+    "\n",
+    "    let s3: &str = &s2[6..];\n",
+    "    println!(\"s3: {s3}\");\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lifetime Annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p3: Point(10, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Point(i32, i32);\n",
+    "\n",
+    "// fn left_most(p1: &Point, p2: &Point) -> &Point {\n",
+    "fn left_most<'a>(p1: &'a Point, p2: &'a Point) -> &'a Point {\n",
+    "    if p1.0 < p2.0 {\n",
+    "        p1\n",
+    "    } else {\n",
+    "        p2\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let _ = {\n",
+    "    let p1: Point = Point(10, 10);\n",
+    "    let p2: Point = Point(20, 20);\n",
+    "    let p3 = left_most(&p1, &p2); // What is the lifetime of p3?\n",
+    "    println!(\"p3: {p3:?}\");\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lifetimes in Function Calls | Lifetimes Elision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some(Point(1, 0))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Point(i32, i32);\n",
+    "\n",
+    "fn cab_distance(p1: &Point, p2: &Point) -> i32 {\n",
+    "    (p1.0 - p2.0).abs() + (p1.1 - p2.1).abs()\n",
+    "}\n",
+    "\n",
+    "fn nearest<'a>(points: &'a [Point], query: &Point) -> Option<&'a Point> {\n",
+    "    let mut nearest = None;\n",
+    "    for p in points {\n",
+    "        if let Some((_, nearest_dist)) = nearest {\n",
+    "            let dist = cab_distance(p, query);\n",
+    "            if dist < nearest_dist {\n",
+    "                nearest = Some((p, dist));\n",
+    "            }\n",
+    "        } else {\n",
+    "            nearest = Some((p, cab_distance(p, query)));\n",
+    "        };\n",
+    "    }\n",
+    "    nearest.map(|(p, _)| p)\n",
+    "}\n",
+    "\n",
+    "let _ = {\n",
+    "    println!(\n",
+    "        \"{:?}\",\n",
+    "        nearest(\n",
+    "            &[Point(1, 0), Point(1, 0), Point(-1, 0), Point(0, -1),],\n",
+    "            &Point(0, 2)\n",
+    "        )\n",
+    "    );\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lifetimes in Data Structures | Struct Lifetimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highlight(\"quick brown fox\")\n",
+      "Highlight(\"lazy dog\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Highlight<'doc>(&'doc str);\n",
+    "\n",
+    "fn erase(text: String) {\n",
+    "    println!(\"Bye {text}!\");\n",
+    "}\n",
+    "\n",
+    "let _ = {\n",
+    "    let text = String::from(\"The quick brown fox jumps over the lazy dog.\");\n",
+    "    let fox = Highlight(&text[4..19]);\n",
+    "    let dog = Highlight(&text[35..43]);\n",
+    "    // erase(text);\n",
+    "    println!(\"{fox:?}\");\n",
+    "    println!(\"{dog:?}\");\n",
+    "};"
+   ]
   }
  ],
  "metadata": {
