1. update learn.ipynb 2. add Exercise: Iterator Method Chaining

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2260,7 +2260,7 @@
     }
    ],
    "source": [
-    "let _ = {\n",
+    "{\n",
     "    let mut a: [i32; 6] = [10, 20, 30, 40, 50, 60];\n",
     "    println!(\"a: {a:?}\");\n",
     "\n",
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2297,7 +2297,7 @@
     }
    ],
    "source": [
-    "let _ = {\n",
+    "{\n",
     "    let s1: &str = \"World\";\n",
     "    println!(\"s1: {s1}\");\n",
     "\n",
@@ -2320,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2348,7 +2348,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "let _ = {\n",
+    "{\n",
     "    let p1: Point = Point(10, 10);\n",
     "    let p2: Point = Point(20, 20);\n",
     "    let p3 = left_most(&p1, &p2); // What is the lifetime of p3?\n",
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2403,15 +2403,13 @@
     "    nearest.map(|(p, _)| p)\n",
     "}\n",
     "\n",
-    "let _ = {\n",
-    "    println!(\n",
-    "        \"{:?}\",\n",
-    "        nearest(\n",
-    "            &[Point(1, 0), Point(1, 0), Point(-1, 0), Point(0, -1),],\n",
-    "            &Point(0, 2)\n",
-    "        )\n",
-    "    );\n",
-    "};"
+    "println!(\n",
+    "    \"{:?}\",\n",
+    "    nearest(\n",
+    "        &[Point(1, 0), Point(1, 0), Point(-1, 0), Point(0, -1),],\n",
+    "        &Point(0, 2)\n",
+    "    )\n",
+    ");"
    ]
   },
   {
@@ -2423,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -2447,7 +2445,7 @@
     "    println!(\"Bye {text}!\");\n",
     "}\n",
     "\n",
-    "let _ = {\n",
+    "{\n",
     "    let text = String::from(\"The quick brown fox jumps over the lazy dog.\");\n",
     "    let fox = Highlight(&text[4..19]);\n",
     "    let dog = Highlight(&text[35..43]);\n",
@@ -2455,6 +2453,278 @@
     "    println!(\"{fox:?}\");\n",
     "    println!(\"{dog:?}\");\n",
     "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fib(0): 1\n",
+      "fib(1): 1\n",
+      "fib(2): 2\n",
+      "fib(3): 3\n",
+      "fib(4): 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "struct Fibonacci {\n",
+    "    curr: u32,\n",
+    "    next: u32,\n",
+    "}\n",
+    "\n",
+    "impl Iterator for Fibonacci {\n",
+    "    type Item = u32;\n",
+    "\n",
+    "    fn next(&mut self) -> Option<Self::Item> {\n",
+    "        let new_next = self.curr + self.next;\n",
+    "        self.curr = self.next;\n",
+    "        self.next = new_next;\n",
+    "        Some(self.curr)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let fib = Fibonacci { curr: 0, next: 1 };\n",
+    "    for (i, n) in fib.enumerate().take(5) {\n",
+    "        println!(\"fib({i}): {n}\");\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IntoIterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point = 3, 10\n",
+      "point = 5, 10\n",
+      "point = 7, 10\n",
+      "point = 9, 10\n",
+      "point = 3, 20\n",
+      "point = 5, 20\n",
+      "point = 7, 20\n",
+      "point = 9, 20\n",
+      "point = 3, 30\n",
+      "point = 5, 30\n",
+      "point = 7, 30\n",
+      "point = 9, 30\n",
+      "point = 3, 40\n",
+      "point = 5, 40\n",
+      "point = 7, 40\n",
+      "point = 9, 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "struct Grid {\n",
+    "    x_coords: Vec<u32>,\n",
+    "    y_coords: Vec<u32>,\n",
+    "}\n",
+    "\n",
+    "impl IntoIterator for Grid {\n",
+    "    type Item = (u32, u32);\n",
+    "    type IntoIter = GridIter;\n",
+    "    fn into_iter(self) -> GridIter {\n",
+    "        GridIter { grid: self, i: 0, j: 0 }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "struct GridIter {\n",
+    "    grid: Grid,\n",
+    "    i: usize,\n",
+    "    j: usize,\n",
+    "}\n",
+    "\n",
+    "impl Iterator for GridIter {\n",
+    "    type Item = (u32, u32);\n",
+    "\n",
+    "    fn next(&mut self) -> Option<(u32, u32)> {\n",
+    "        if self.i >= self.grid.x_coords.len() {\n",
+    "            self.i = 0;\n",
+    "            self.j += 1;\n",
+    "            if self.j >= self.grid.y_coords.len() {\n",
+    "                return None;\n",
+    "            }\n",
+    "        }\n",
+    "        let res = Some((self.grid.x_coords[self.i], self.grid.y_coords[self.j]));\n",
+    "        self.i += 1;\n",
+    "        res\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let grid = Grid { x_coords: vec![3, 5, 7, 9], y_coords: vec![10, 20, 30, 40] };\n",
+    "    for (x, y) in grid {\n",
+    "        println!(\"point = {x}, {y}\");\n",
+    "    }\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FromIterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prime_squares: [4, 9, 25, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "let primes = vec![2, 3, 5, 7];\n",
+    "let prime_squares = primes.into_iter().map(|p| p * p).collect::<Vec<_>>();\n",
+    "println!(\"prime_squares: {prime_squares:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the foo module\n",
+      "In the bar module\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod foo {\n",
+    "    pub fn do_something() {\n",
+    "        println!(\"In the foo module\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "mod bar {\n",
+    "    pub fn do_something() {\n",
+    "        println!(\"In the bar module\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "foo::do_something();\n",
+    "bar::do_something();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outer::public\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod outer {\n",
+    "    fn private() {\n",
+    "        println!(\"outer::private\");\n",
+    "    }\n",
+    "\n",
+    "    pub fn public() {\n",
+    "        println!(\"outer::public\");\n",
+    "    }\n",
+    "\n",
+    "    mod inner {\n",
+    "        fn private() {\n",
+    "            println!(\"outer::inner::private\");\n",
+    "        }\n",
+    "\n",
+    "        pub fn public() {\n",
+    "            println!(\"outer::inner::public\");\n",
+    "            super::private();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "outer::public();"
    ]
   }
  ],
